Increase header z-index to prevent carousel controls from appearing over it

--- a/styles/app.css
+++ b/styles/app.css
@@ -7314,7 +7314,7 @@ img {
 header {
   background-color: #bfd4df;
   top: 0;
-  z-index: 2; }
+  z-index: 99; }
   header #logo {
     display: block;
     height: 8rem;
